<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/prosport_sign_up_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prosport_sign_up_title"
            style="@style/ProSport.AuthTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            app:layout_constraintBottom_toTopOf="@+id/prosport_phone_input_layout"
            app:layout_constraintStart_toStartOf="@id/prosport_phone_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/prosport_phone_input_layout"
            style="@style/ProSport.AuthInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/prosport_password_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prosport_sign_up_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prosport_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_in_hint_input_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/prosport_password_input_layout"
            style="@style/ProSport.AuthInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/prosport_retry_password_input_layout"
            app:layout_constraintEnd_toEndOf="@id/prosport_phone_input_layout"
            app:layout_constraintStart_toStartOf="@id/prosport_phone_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/prosport_phone_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prosport_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_in_hint_input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/prosport_retry_password_input_layout"
            style="@style/ProSport.AuthInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/prosport_sign_up_button"
            app:layout_constraintEnd_toEndOf="@id/prosport_password_input_layout"
            app:layout_constraintStart_toStartOf="@id/prosport_password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/prosport_password_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prosport_retry_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_hint_retry_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/prosport_sign_up_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/prosport_retry_password_input_layout"
            app:layout_constraintTop_toBottomOf="@id/prosport_retry_password_input_layout"/>
    </android.support.constraint.ConstraintLayout>

    <com.btc.common.extension.view.ContentLoaderProgressBar
        android:id="@+id/prosport_sign_up_progressbar"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>
</FrameLayout>